[gd_scene load_steps=19 format=3 uid="uid://0xkba45qjwnx"]

[ext_resource type="Script" uid="uid://cmbdtlx85r3vj" path="res://Scripts/enemy.gd" id="1_jj8qi"]
[ext_resource type="Texture2D" uid="uid://d20dr5c2ntsbi" path="res://Sprites/Enemies/Skeleton/White_Walk.png" id="2_3homo"]
[ext_resource type="Texture2D" uid="uid://dmviqnvyv74e4" path="res://Sprites/Enemies/Skeleton/White_Idle.png" id="3_6ghok"]
[ext_resource type="Texture2D" uid="uid://qq8oxjrh7wc1" path="res://Sprites/Enemies/Skeleton/White_Hurt.png" id="4_jwkx7"]
[ext_resource type="Texture2D" uid="uid://cmi1k06qklfjm" path="res://Sprites/Enemies/Skeleton/White_Die.png" id="5_ok843"]
[ext_resource type="Texture2D" uid="uid://dl0eotxjd0bux" path="res://Sprites/Enemies/Skeleton/White_Attack1.png" id="6_3dpap"]
[ext_resource type="Texture2D" uid="uid://cg3423xgr5qi0" path="res://Sprites/Enemies/Skeleton/White_Attack2.png" id="7_jvte1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jvte1"]
radius = 16.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ilcl4"]
radius = 16.0
height = 48.0

[sub_resource type="Animation" id="Animation_6khg0"]
resource_name = "Attack 1"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_3dpap")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.20000002, 0.40000004, 0.6, 0.8000001, 1, 1.2, 1.4000001, 1.6000001, 1.8000001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(34, 18, 34, 46), Rect2(128, 17, 22, 47), Rect2(213, 19, 33, 45), Rect2(304, 20, 38, 44), Rect2(400, 21, 38, 43), Rect2(510, 18, 65, 46), Rect2(609, 16, 61, 48), Rect2(703, 17, 58, 47), Rect2(800, 17, 44, 47), Rect2(898, 18, 34, 46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1000000, 1),
"update": 0,
"values": [1.5, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_7pb3c"]
resource_name = "Attack 2"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_jvte1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.20000002, 0.40000004, 0.6, 0.8000001, 1, 1.2, 1.4000001, 1.6000001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(34, 18, 34, 46), Rect2(126, 19, 29, 45), Rect2(220, 22, 36, 42), Rect2(316, 23, 36, 41), Rect2(418, 17, 61, 47), Rect2(515, 17, 61, 47), Rect2(611, 18, 60, 46), Rect2(708, 18, 45, 46), Rect2(802, 18, 34, 46)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8000001, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_ilcl4"]
resource_name = "Die"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ok843")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_jvte1"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_jwkx7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.20000002, 0.40000004, 0.6, 0.8000001, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(34, 18, 34, 46), Rect2(126, 22, 27, 42), Rect2(224, 21, 26, 43), Rect2(322, 19, 32, 45), Rect2(418, 18, 34, 46), Rect2(34, 18, 34, 46)]
}

[sub_resource type="Animation" id="Animation_3dpap"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_6ghok")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:region_rect")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(34, 18, 34, 46), Rect2(130, 18, 34, 46), Rect2(226, 19, 34, 45), Rect2(322, 20, 34, 44), Rect2(418, 20, 34, 44), Rect2(514, 19, 34, 45), Rect2(610, 18, 34, 46), Rect2(706, 18, 34, 46), Rect2(34, 18, 34, 46)]
}

[sub_resource type="Animation" id="Animation_ok843"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(36, 19, 31, 45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3homo")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AnimationPlayer:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../AttackArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jwkx7"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.10000001, 0.20000002, 0.3, 0.40000004, 0.5, 0.6, 0.70000005, 0.8000001, 0.90000004, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(36, 19, 31, 45), Rect2(131, 18, 32, 46), Rect2(227, 17, 33, 47), Rect2(322, 16, 35, 48), Rect2(417, 18, 36, 46), Rect2(511, 19, 39, 45), Rect2(609, 18, 36, 46), Rect2(706, 17, 35, 47), Rect2(803, 16, 33, 48), Rect2(899, 18, 32, 46), Rect2(36, 19, 31, 45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_3homo")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jvte1"]
_data = {
&"Attack 1": SubResource("Animation_6khg0"),
&"Attack 2": SubResource("Animation_7pb3c"),
&"Die": SubResource("Animation_ilcl4"),
&"Hurt": SubResource("Animation_jvte1"),
&"Idle": SubResource("Animation_3dpap"),
&"RESET": SubResource("Animation_ok843"),
&"Walk": SubResource("Animation_jwkx7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6khg0"]
size = Vector2(21.23894, 7.0796466)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jj8qi")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_jvte1")

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CapsuleShape2D_ilcl4")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.25, 0)
scale = Vector2(1.016129, 1)
texture = ExtResource("2_3homo")
region_enabled = true
region_rect = Rect2(36, 19, 31, 45)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_jvte1")
}
autoplay = "Idle"

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(9.536743e-07, 0)
scale = Vector2(2.26, 2.26)
shape = SubResource("RectangleShape2D_6khg0")

[node name="WallCheck" type="RayCast2D" parent="."]
target_position = Vector2(15, 0)

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
